<resources>
    <string name="app_name">GroupedRecyclerViewAdapter</string>

    <string name="sticky_list">头部吸顶的列表</string>
    <string name="group_list">分组的列表</string>
    <string name="no_header">不带组头的列表</string>
    <string name="no_footer">不带组尾的列表</string>
    <string name="grid_children_1">子项为Grid的列表</string>
    <string name="grid_children_2">子项为Grid的列表(各组子项的Span不同)</string>
    <string name="expandable">可展开收起的列表</string>
    <string name="various">头、尾和子项都支持多种类型的列表</string>
    <string name="various_child">多种子项类型的列表</string>
    <string name="binding_adapter">使用DataBinding的列表</string>
    <string name="empty_list">空布局</string>
    <string name="empty_view">这是个空布局</string>
    <string name="load_data">加载数据</string>

</resources>
